manifests/postgres-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: postgres
  namespace: default
spec:
  ports:
  - name: postgres
    port: 5432
    targetPort: 5433
    protocol: TCP
  selector:
    app: yb-tserver
    component: yugabytedb
    release: yugabyte
  type: ClusterIP
