manifests/registry-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: registry-ingress
  namespace: default
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web
spec:
  ingressClassName: traefik
  rules:
  - host: registry.morescotech.com.br
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: registry-podman-bridge
            port:
              number: 5000
