manifests/yugabyte-ingressroutetcp.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRouteTCP
metadata:
  name: yugabyte
  namespace: default
spec:
  entryPoints:
  - postgres
  routes:
  - match: HostSNI(`postgres.morescotech.com.br`)
    services:
    - name: yb-tserver-service
      port: 5432
    tls:
      certResolver: le
      options:
        name: postgres-alpn
        namespace: default
  - match: HostSNI(`*`)
    services:
    - name: yb-tserver-service
      port: 5432
