manifests/yugabyte-plain-ingressroutetcp.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRouteTCP
metadata:
  name: yugabyte-plain
  namespace: default
spec:
  entryPoints:
  - postgres
  routes:
  - match: HostSNI(`*`)
    services:
    - name: yb-tserver-service
      port: 5432
